mountain kingdom, layout &  login without @media query

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "mountain_king",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saraems.github.io/Mountain_Kingdom/",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.11.0",
+    "query-string": "^6.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.4"
